# gamescope

./: .clang-format  .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: main.yml
config/: display.conf
contrib/: nvidia-standalone-test.sh
docs/: NVIDIA.md
layer/: VkLayer_FROG_gamescope_wsi.cpp  meson.build  xcb_helpers.hpp
protocol/: color-management-v1.xml  gamescope-action-binding.xml  gamescope-control.xml  gamescope-input-method.xml  gamescope-xwayland.xml  meson.build
scripts/: README.md
scripts/00-gamescope/common/: util.lua
scripts/00-gamescope/displays/: deckhd.steamdeck.deckhd-lcd.lua  gpd.winmax2.lcd.lua  lenovo.legiongo2.oled.lua  onexplayer.f1.oled.lua  valve.steamdeck.oled.lua
scripts/00-gamescope/input/: hotkeys.lua
src/: BufferMemo.cpp  BufferMemo.h  GamescopeVersion.h.in  InputEmulation.cpp  InputEmulation.h  LibInputHandler.cpp  LibInputHandler.h  Ratio.h  Timeline.cpp  Timeline.h  backend.cpp  backend.h  backends.h  color_bench.cpp  color_helpers.cpp  color_helpers.h  color_helpers_impl.h  color_tests.cpp  commit.cpp  commit.h  composite.comp  composite.comp.hlsl  config.cpp  config.hpp  convar.cpp  convar.h  convar_script.cpp  display_selection.h  drm.cpp  drm.hpp  drm_include.h  edid.cpp  edid.h  gamescope_shared.h  gpuvis_trace_utils.h  hdmi.h  headless.cpp  hotkey.cpp  hotkey.h  ime.cpp  (+38 more)
src/Apps/: gamescope_hotkey_example.cpp  gamescope_type.c  gamescopectl.cpp  gamescopereaper.cpp  gamescopestream.cpp
src/Backends/: DRMBackend.cpp  DeferredBackend.h  HeadlessBackend.cpp  OpenVRBackend.cpp  SDLBackend.cpp  WaylandBackend.cpp
src/Backends/wayland/: CreateShmBuffer.cpp  WaylandBackend.cpp  WaylandInputThread.cpp  WaylandPlane.cpp  WaylandPlane.hpp
src/Script/: Script.cpp  Script.h
src/Utils/: Algorithm.h  Defer.h  Dict.h  DirHelpers.cpp  DirHelpers.h  NonCopyable.h  Parsers.h  Process.cpp  Process.h  TempFiles.cpp  TempFiles.h  Version.cpp  Version.h  Xkb.cpp  Xkb.h
src/WaylandServer/: GamescopeActionBinding.h  LinuxDrmSyncobj.h  Reshade.h  WaylandDecls.h  WaylandProtocol.h  WaylandResource.h  WaylandServerLegacy.h
src/shaders/: bicubic.h  blit_push_data.h  colorimetry.h  composite.h  cs_bicubic.comp  cs_composite_blit.comp  cs_composite_blur.comp  cs_composite_blur_cond.comp  cs_composite_rcas.comp  cs_gaussian_blur_horizontal.comp  cs_rgb_to_nv12.comp  descriptor_set.h  ffx_a.h  ffx_fsr1.h  subpixel_scaler.h
subprojects/: .gitignore  glm.wrap  libdisplay-info.wrap  libliftoff.wrap  openvr.wrap  stb.wrap  vkroots.wrap  wlroots.wrap
subprojects/packagefiles/openvr/: meson.build
tests/: meson.build  reaper_test_helper.cpp  test_convar.cpp  test_display_selection.cpp  test_utils_parsers.cpp  test_utils_process.cpp
tools/: build_and_install_on_steamos_device_local.sh  build_and_install_on_steamos_device_remote.sh  build_on_steamos_device_local.sh  reset_to_system_gamescope_remote.sh  steamos_password_helpers.sh  steamos_sessionctl_remote.sh
